# wapps

./: .gitignore  Cargo.toml
.github/agents/: copilot-instructions.md
.github/workflows/: web-host-deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
examples/demo/: Cargo.toml  package.sh  package_wapp.mjs
examples/demo/src/: lib.rs
examples/game_of_life/: Cargo.toml  package_wapp.mjs
host/: Cargo.toml
host/src/: graphics.rs  host_interface.rs  loader.rs  main.rs  runtime.rs
host/web/: index.html  main.js  runtime.js  styles.css
specs/001-wasm-pixel-canvas/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wasm-pixel-canvas/checklists/: requirements.md
specs/001-wasm-pixel-canvas/contracts/: wapps.wit
specs/002-wapp-header-metadata/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-wapp-header-metadata/checklists/: requirements.md
specs/002-wapp-header-metadata/contracts/: binary-format.md
specs/003-json-header-format/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-json-header-format/checklists/: requirements.md
specs/003-json-header-format/contracts/: metadata.schema.json
specs/004-web-host-env/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-web-host-env/checklists/: requirements.md
specs/004-web-host-env/contracts/: web-runtime-api.md
