[package]
name = "wapps-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host runner for WAPP (WebAssembly Pixel Package) applications"

[dependencies]
# WASM Runtime
wasmtime = "29"
wasmtime-wasi = "29"

# Graphics
sdl2 = { version = "0.37", features = ["bundled"] }

# CLI and utilities
clap = { version = "4", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
